# rustmath

./: Cargo.toml  build.rs  matrix_result.csv
benches/: matrix_bench.rs
src/: lib.rs
