[package]
name = "rustmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapack = "0.19.0"
#pkg-config = "0.3.29"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matrix_bench"
harness = false